# WS_SUSEP_SES

./: 404.html  README.md  mkdocs.yml  objects.inv  pyproject.toml
contato/: index.html
docs/: contato.md  docs_schema.md  funcoes.md  index.md
docs/schemas/: schema_SesBalanco.md  schema_SesCampos.md  schema_SesCapUf.md  schema_SesCias.md  schema_SesDadosCap.md  schema_SesGrupoRamo.md  schema_SesRamos.md  schema_SesSeguros.md  schema_SesUf2.md  schema_SesValoresMovRamos.md  schema_SesValoresResMovMovGrupos.md
funcoes/: index.html
notebooks/: buscar_arquivo.ipynb  schemas_arquivo.ipynb
schemas/schema_SesCampos/: index.html
schemas/schema_SesCapUf/: index.html
schemas/schema_SesCias/: index.html
schemas/schema_SesDadosCap/: index.html
schemas/schema_SesGrupoRamo/: index.html
schemas/schema_SesUf2/: index.html
schemas/schema_SesValoresMovRamos/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/docs_schema/: index.html
site/schemas/schema_SesBalanco/: index.html
site/schemas/schema_SesCampos/: index.html
site/schemas/schema_SesCias/: index.html
site/schemas/schema_SesDadosCap/: index.html
site/schemas/schema_SesGrupoRamo/: index.html
site/schemas/schema_SesRamos/: index.html
site/schemas/schema_SesSeguros/: index.html
site/schemas/schema_SesUf2/: index.html
site/schemas/schema_SesValoresMovRamos/: index.html
site/search/: search_index.json
src/: PRIMEIRA PARTE ENEL.ipynb  buscar_arquivo.ipynb  funcoes.py  main.py  schemas.py  schemas_arquivo.ipynb
(+1 files in other folders)
