[project]
name = "ws-ses-susep"
version = "0.1.0"
description = ""
authors = [
    {name = "ThiagoHolandaRamalho",email = "thiago.holandarm@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "selenium (>=4.29.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandera[io] (>=0.22.1,<0.23.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "mkdocs-material (>=9.6.5,<10.0.0)",
    "mkdocstrings-python (>=1.16.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
